--- a/Model_Selection.ipynb
+++ b/Model_Selection.ipynb
@@ -3,10 +3,10 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Model Selection",
+      "name": "Copy of Model Selection",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNCpZZUPWgXWZZb8Ps+K+O6",
+      "authorship_tag": "ABX9TyMpOmA8/5DXJBzzvpLehYF2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,18 +30,32 @@
       "metadata": {
         "id": "Msbd_XiMVnBB",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 129
+        },
+        "outputId": "f73f496d-346f-4eaf-c02c-491222e4d1e9"
       },
       "source": [
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from sklearn import svm\n",
-        "\n",
-        "from sklearn.datasets import fetch_california_housing\n",
-        "from sklearn.model_selection import train_test_split"
+        "import seaborn as sns\n",
+        "import matplotlib.pyplot as plt\n",
+        "from sklearn.model_selection import train_test_split, KFold, cross_val_score,RandomizedSearchCV\n",
+        "from sklearn, import linear_model, metrics\n",
+        "from sklearn.linear_model import LassoCV\n"
       ],
-      "execution_count": 8,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-43393289b567>\"\u001b[0;36m, line \u001b[0;32m6\u001b[0m\n\u001b[0;31m    from sklearn, import linearmodel, metrics\u001b[0m\n\u001b[0m                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -78,13 +92,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 38
         },
-        "outputId": "5f0f0d40-d67a-49b9-a01c-066493bd612c"
+        "outputId": "1cdea744-93f1-4f47-b570-9d3c4a2f8cec"
       },
       "source": [
         "from google.colab import files\n",
         "uploaded = files.upload()\n",
-        "dat = pd.read_csv('train.csv', hedaer = 0)\n",
-        "data.drop(columns = 'Id', inplace=True)"
+        "dat = pd.read_iynb('Data Processing.ipynb', hedaer = 0)\n",
+        "data.drop(columns = 'Id', inplace=True)\n",
+        "data.shape\n",
+        "(20460 , 8)"
       ],
       "execution_count": null,
       "outputs": [
@@ -93,9 +109,9 @@
           "data": {
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-79bf572f-6616-4ff2-9b1a-92e8ff60bef2\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-59fe739b-f6be-43b6-8e65-dc3dd0ce308b\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-79bf572f-6616-4ff2-9b1a-92e8ff60bef2\">\n",
+              "     <output id=\"result-59fe739b-f6be-43b6-8e65-dc3dd0ce308b\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -112,19 +128,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "SteBwwIiNk1M",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "YHgASNn5MDff",
@@ -137,18 +140,71 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cODnjR8CJ8x-",
+        "id": "vwLPInOCYvaV",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "from sklearn.model_selection import cross_val_score\n",
-        "clf = svm.SVC(kernel='linear', C=1)\n",
-        "scores = cross_val_score(clf, X, y, cv=5)\n",
-        "scores\n",
-        "\n",
-        "print(\"Accuracy: %0.2f (+/- %0.2f)\" % (scores.mean(), scores.std() * 2))\n",
-        "Accuracy: 0.98 (+/- 0.03)"
+        " x_train, x_test, y_train, y_test = train_tst_split(x_2, y_2, test_size=0.2, random_state=42) "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eC38MC_lo1di",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "X = data['size_in_sq_ft']\n",
+        "Y = data['price_x1000_sh']\n",
+        "N = float(len(X))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3tlqXPH1b-Yj",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "[Data\\ Processing.ipynb] #regressor=linear_model.ElasticNet()\n",
+        "#regressor.fit (x_train, y_train)\n",
+        "result = {}\n",
+        "models = { 'LinearRegression': linear_model.LinearRegression(),\n",
+        "            'Lasso':linear_model.Lasso(),\n",
+        "            'Ridge':linear_model.Ridge(),\n",
+        "            'ElasticNet':linear_model.ElasticNet() }\n",
+        "for i in models: \n",
+        "  models[i].fit(x_train,y_train)\n",
+        "  accuracy= models[i].score(x_test, y_test)\n",
+        "  result [i] = [accuracy]\n",
+        "  pd.DataFrame (result) \n",
+        "  "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q_Za4SbQdA8B",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "kfold = KFold(n_splits=4)\n",
+        "for i in models:\n",
+        "  regressor = models [i]\n",
+        "  c_validated = cross_val_score(regressor, x_train, y_train, cv=kfold)\n",
+        "  accuracy = model[i].score(x_test, y_test)\n",
+        "  result [i] = [accuracy]\n",
+        "  pd.DataFrame(result)"
       ],
       "execution_count": null,
       "outputs": []
@@ -163,6 +219,119 @@
         "Using the cross_val_ score function on the estimator and dataset\n",
         "Estimation of the linear kernel support vector machine functions"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "32GDN5WimmRl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in models:\n",
+        "  regressor = models[i]\n",
+        "  if i == 'Lasso':\n",
+        "   random =  RandomSearchCV(regressor,param_distributions=lasso_params,cv=5,n_len= 1)\n",
+        "   results = random.fit(x_train, y_train)\n",
+        "\n",
+        "   print(\"Best Params are \", results.best_params_)\n",
+        "   accuacy = results.score(x_test, y_test)\n",
+        "   else:\n",
+        "   c_validated = cross_val_score(regressor, x_train,y_train,cv=kfold)\n",
+        "   accuracy = c_validated.mean()\n",
+        "   result[i]=[accuracy]\n",
+        "   pd.DataFrame(result)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Nxb1Kyljv4Gc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in models:\n",
+        "  regressor = models[i]\n",
+        "  if i == 'Ridge':\n",
+        "   random =  RandomSearchCV(regressor,param_distributions=ridge_params,cv=5,n_len= 1)\n",
+        "   results = random.fit(x_train, y_train)\n",
+        "\n",
+        "   print(\"Best Params are \", results.best_params_)\n",
+        "   accuacy = results.score(x_test, y_test)\n",
+        "   else:\n",
+        "   c_validated = cross_val_score(regressor, x_train,y_train,cv=kfold)\n",
+        "   accuracy = c_validated.mean()\n",
+        "   result[i]=[accuracy]\n",
+        "   pd.DataFrame(result)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PnbgxMWfEM_N",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in models:\n",
+        "  regressor = models[i]\n",
+        "  if i == 'ElasticNet':\n",
+        "   random =  RandomSearchCV(regressor,param_distributions=ElasticNet_params,cv=5,n_len= 1 )\n",
+        "   results = random.fit(x_train, y_train)\n",
+        "\n",
+        "   print(\"Best Params are \", results.best_params_)\n",
+        "   accuacy = results.score(x_test, y_test)\n",
+        "   else:\n",
+        "   c_validated = cross_val_score(regressor, x_train,y_train,cv=kfold)\n",
+        "   accuracy = c_validated.mean()\n",
+        "   result[i]=[accuracy]\n",
+        "   pd.DataFrame(result)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6agTOz22Fz5w",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for i in models:\n",
+        "  regressor = models[i]\n",
+        "  if i == 'LinearRegression':\n",
+        "   random =  RandomSearchCV(regressor,param_distributions=LinearRegression_params,cv=5,n_len= 1 )\n",
+        "   results = random.fit(x_train, y_train)\n",
+        "\n",
+        "   print(\"Best Params are \", results.best_params_)\n",
+        "   accuacy = results.score(x_test, y_test)\n",
+        "   else:\n",
+        "   c_validated = cross_val_score(regressor, x_train,y_train,cv=kfold)\n",
+        "   accuracy = c_validated.mean()\n",
+        "   result[i]=[accuracy]\n",
+        "   pd.DataFrame(result)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RbedevWMYnYc",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -205,23 +374,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "m_GX7MfeKT4D",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn import metrics\n",
-        "scores = cross_val_score(\n",
-        "...     clf, X, y, cv=5, scoring='f1_macro')\n",
-        "scores\n",
-        "array([0.96..., 1.  ..., 0.96..., 0.96..., 1.        ])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "O1vDmp6YTnXq",
@@ -240,23 +392,6 @@
       "source": [
         ""
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "kk5R7MlSK_pl",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "from sklearn.model_selection import ShuffleSplit\n",
-        " X = np.arange(10)\n",
-        " ss = ShuffleSplit(n_splits=5, test_size=0.25, random_state=0)\n",
-        " for train_index, test_index in ss.split(X):\n",
-        "   print(\"%s %s\" % (train_index, test_index))"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
